[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TasmeerJamali", email = "163600279+TasmeerJamali@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
]

[project.scripts]
project = "project:main"
panaflow = "project.main:kickoff"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
